[project]
name = "gitbug-java"
version = "1.0.0"
description = "A Reproducible Java Benchmark of Recent Bugs"
authors = [
    {name = "André Silva", email = "andreans@kth.se"},
    {name = "Nuno Saavedra", email = "nuno.saavedra@tecnico.ulisboa.pt"}
]
license = {text = "MIT License"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pygithub>=2.3.0",
    "pygit2>=1.12.1", 
    "docker>=7.1.0",
    "unidiff>=0.7.5",
    "tqdm>=4.65.0",
    "fire>=0.6.0",
    "junitparser>=3.1.0",
    "pyyaml>=6.0.1",
    "gitbugactions==2.0.4",
    "ipykernel>=6.29.5"
]

[project.optional-dependencies]
dev = [
    "black>=23.11.0",
    "pytest>=7.4.3"
]